@@ -16,15 +16,17 @@ import org.eclipse.debug.core.ILaunchConfiguration;
 public class CMainAttachTab extends CMainTab {
 	
 	public boolean isValid(ILaunchConfiguration config) {
-		if (super.isValid(config) == false) {
-			String name = fProgText.getText().trim();
-			if (name.length() == 0) {  // allow no program for attach config.
-				setErrorMessage(null);
-				return true; 
-			}
-			return false;
-		}
-		return true;
+		// See bugs #39581 and #110392
+//		if (super.isValid(config) == false) {
+//			String name = fProgText.getText().trim();
+//			if (name.length() == 0) {  // allow no program for attach config.
+//				setErrorMessage(null);
+//				return true; 
+//			}
+//			return false;
+//		}
+//		return true;
+		return super.isValid(config);
 	}
 
 }
